# libgenn

./: CMakeLists.txt  README.md  network.hpp
include/genn/: gene.hpp  genetics.hpp  instance.hpp  mutation.hpp  mutator.hpp  network.hpp  random.hpp
